<resources>
    <string name="app_name">Pulze</string>
    <string name="home">Home</string>
    <string name="fab_content_desc">Add Record</string>
    <string name="add">ADD</string>
    <string name="slogan">Group 2</string>
    <string name="openNavDrawer">Open</string>
    <string name="closeNavDrawer">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Intro Page -->
    <string name="view_pager">ViewPager</string>
    <string name="headText">Welcome to Pulze</string>
    <string name="descriptionText">This is a blood pressure logger app</string>
    <string name="discover">Discover</string>
    <string name="shop">Shop</string>
    <string name="offers">Offers</string>
    <string name="reward">Reward</string>
    <string name="discover_text">Look for things around you</string>
    <string name="shop_text"><![CDATA[Get the best deals & Coupons]]></string>
    <string name="offers_text">Find great offers while you discover</string>
    <string name="reward_text">Rewards something</string>
    <string name="textLabel">Name</string>
    <string name="dropdownLabel">Gender</string>
    <string name="start_pulze">Start Pulze</string>
    <string name="select_birthday">Select Birthday</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="add_record">Add Record</string>
    <string name="select_date">Select Date</string>
    <string name="systole">Systole</string>
    <string name="mmhg">mmHg</string>
    <string name="diastole">Diastole</string>
    <string name="mmHg">mmHg</string>
    <string name="statistics">Statistics</string>
    <string name="next">Next</string>
    <string name="highlights">HighLights</string>
    <string name="recent">Recent</string>
    <string name="select_time">Select Time</string>
    <string name="select_date_time">Select Date And Time</string>
    <string name="pulse">Pulse</string>
    <string name="average">Average</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>